syntax = "proto3";
package proto;
import "google/protobuf/timestamp.proto";
option go_package = "/proto";


//message EventHeader {
//  string topic_name = 1;
//}

message Event {
  string id = 1;
  string topic = 2;
  bytes body = 3;
  google.protobuf.Timestamp createdAt = 4;
  uint32 expiresAt = 5;
}

message SubscribeRequest {
  string subscriberID = 1;
  string subscriberName = 2;
  string topic = 3;
  google.protobuf.Timestamp createdAt = 4;
}

message ACK {}

service Mercurius {
  rpc Publish (Event) returns (ACK);
  rpc Subscribe (SubscribeRequest) returns (stream Event);
}